payana/payana_gke/deployment.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payana-app-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payana
  template:
    metadata:
      labels:
        app: payana
    spec:
      containers:
      - name: payana-app
        image: us-central1-docker.pkg.dev/project-payana-395305/payana-docker-repo/payana:v1
        # This app listens on port 8888 for web traffic by default.
        ports:
        - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /health/ready/
            port: 8888
          periodSeconds: 60
          initialDelaySeconds: 120      
        livenessProbe:
          httpGet:
            path: /health/live/
            port: 8888
          periodSeconds: 60        
          initialDelaySeconds: 120
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
